--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,49 @@
 
+body{
+  font-size: 1.15rem;
+  }
+  
+  .inner{
+      max-width: 75vw;
+  }
+  
+  h1 {
+    margin-top: 3rem;
+    font-size: 2rem;
+}  
+
+h2 {
+    margin-top: 2rem;
+    font-size: 1.6rem;
+} 
+
+h3 {
+    margin-top: 2rem;
+    font-size: 1.2rem;
+} 
+
+p{
+  margin-top: 2.6rem;
+  font-size:1.2rem;
+  line-height: 2.2rem;
+  }
+
+li{
+padding-top: 0.3rem;
+}
+
+a:visited {
+  color: purple;
+}
+
+#header_wrap{
+display:none;
+}
+
+#main_content_wrap{
+padding-bottom: 6rem;
+}
+
+#footer_wrap{
+display:none;
+}
